[package]
name = "nyah"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.5.3"
blake2 = "0.10"
hex = "0.4.3"
local-ip-address = "0.4"
laminar = { git = "https://github.com/allie-signet/laminar.git" }
rmp-serde = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
crossbeam-channel = "^0.5"
argh = "0.1.7"
libhumancode = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"